--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "cnTareas":"Data Source=LAPTOP-BRN5S8VP\\SQLEXPRESS;Initial Catalog=TareasDb;user id=sa;password=1234;TrustServerCertificate=True"
+  }
 }
